ui optimization:removed backdrop blur, improved seo:added descriptive link

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -91,8 +91,12 @@ html *::-webkit-scrollbar-thumb {
 }
 
 .blog-container a {
-    text-decoration: underline;
+    
     color: rgb(20, 161, 237) !important;
+}
+.blog-container a:hover {
+    
+    text-decoration: underline;
 }
 
 .blog-container > h1 > span {
